# SpeechDewarping

./: .gitignore  audio.py  data_utils.py  espeak-phoneme-symbols.txt  hparams.py  model.py  preprocess.py  pyproject.toml  requirements.txt  speech_dewarping.mmd  todo.md  train.py
text/: symbols.py
