[project]
name = "speechdewarping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastdtw==0.3.4",
    "ffmpeg==1.4",
    "ffmpeg-python==0.2.0",
    "gil>=1.25.0.0",
    "jamo==0.4.1",
    "librosa>=0.9.0",
    "matplotlib>=3.6.0",
    "multiprocess==0.70.14",
    "nltk==3.7",
    "numpy>=1.23,<1.25",
    "phonemizer",
    "pip>=25.2",
    "scipy>=1.13.1",
    "setuptools<60.0",
    "soundfile>=0.13.1",
    "tensorboard",
    "torch>=2.7.1",
    "tqdm==4.64.0",
    "unidecode==1.3.6",
]

[tool.uv.sources]
phonemizer = { git = "https://github.com/bootphon/phonemizer" }
